# airaware-server

./: .dockerignore  .gitignore  .pdbrc.py  Dockerfile  LTN_areas_Nov_22_share.geojson  Makefile  README.md  app_config.py  borough_mapper.py  breathe_london.py  broken_sites.json  cli.py  crontab  dev_requirements.txt  docker-compose.yml  enricher.py  exception_handlers.py  fly.toml  influx_datastore.py  main.py  middleware.py  pyproject.toml  reproj_geojson.py  requirements.txt  run_server.sh  site_synchroniser.py  sync.sh  sync_data.py  transformed.geojson
alembic/: env.py
alembic/versions/: 3284c714b7fd_create_models.py  39a00e3eb7f1_add_is_data_ok_column.py  a4c622d36ce2_fix_up.py  cbf3aa0119c2_add_enabled_flag.py  e11be1940ae9_request_log.py  e6899638a13d_init.py  e6899638a13d_timescale.py
geometry/: boroughs.json  cc.json  lez.json  ltns.json
server/: database.py  logging.py  models.py  postgres_datastore.py  schemas.py  utils.py
server/models/: __init__.py  broken_site_model.py  data_quality_model.py  request_log_model.py  sensor_data_model.py  site_model.py
server/repository/: __init__.py.old  abstract_geometry_repository.py  abstract_request_repository.py  abstract_sensor_repository.py  fake_geometry_repository.py  fake_request_repository.py  fake_sensor_repository.py  geometry_repository.py  request_repository.py  sensor_repository.py
server/schemas/: __init__.py  bad_data_schema.py  breach_schema.py  data_quality_schema.py  heatmap_schema.py  outlier_block_schema.py  range_schema.py  rank_schema.py  request_log_schema.py  sensor_data_schema.py  site_average_schema.py  site_schema.py  sync_site_schema.py  wrapped_schema.py
server/service/: __init__.py  geometry_service.py  processing_result.py  request_service.py  sensor_service.py
server/source/: breathe_london.py  remote_sources.py
server/types/: __init__.py  classification.py  data_status.py  frequency.py  series.py  site_status.py  source.py
server/unit_of_work/: abstract_unit_of_work.py  fake_unit_of_work.py  unit_of_work.py
tests/: conftest.py  test_borough_mapper.py  test_utils.py
tests/api/: test_geometry.py  test_healthcheck.py  test_request.py  test_sensor.py
tests/api/__snapshots__/: test_sensor.ambr
tests/repository/: test_geometry_repository.py  test_sensor_repository.py
tests/service/: test_sensor_service.py
tests/source/: test_breathe_london.py
