[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sacha Manson-Smith <smansonsmith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
influxdb3-python = "^0.2.1"
pandas = "^2.1.0"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
