[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sacha Manson-Smith <smansonsmith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
httpx = "^0.25.1"
python-dotenv = "^1.0.0"
click = "^8.1.7"
pydantic = "^2.3.0"
pydash = "^7.0.6"
shapely = "^2.0.1"
pyproj = "^3.6.1"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^7.4.2"
pytest-mock = "^3.12.0"
pytest-httpx = "^0.27.0"
isort = "^5.12.0"
syrupy = "^4.6.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"